Reenable DCHECKs in navigation predictor

Some of the DCHECKs were disabled due to a bug which was causing
same anchor element to be reported multiple times to the browser process.
Now, since that bug has been fixed, we can reenable some of the
DCHECKs in navigation predictor which ensure that the size occupied
by any target HREF (after aggregating across all anchor elements
that point to the same target) does not exceed 1.0.

Bug: 894092
Change-Id: Iec003a857e8b990bcc01f522e49ed8cdd6191137
Reviewed-on: https://chromium-review.googlesource.com/c/1277372
Commit-Queue: Tarun Bansal <tbansal@chromium.org>
Reviewed-by: Ryan Sturm <ryansturm@chromium.org>
Cr-Commit-Position: refs/heads/master@{#598875}
Former-commit-id: 36955f04ab6bcb80859005bb76def5d61d1e8d63